# SurajGPT

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  rag_chain.py  requirements.txt
.github/workflows/: ping.yml
